--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ input:focus {
     color: #333;
     text-align: center;
     margin-bottom: 1rem;
-    display: none;
+    /*display: none;*/
 }
 
 #register-form #generated-password p {
@@ -132,3 +132,6 @@ input:focus {
 #register-form input[type="submit"]:hover {
     opacity: 1;
 }
+
+
+/*Segunda versão*/
